generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider  = "postgresql"
  url       = env("DATABASE_URL")
  directUrl = env("DIRECT_URL")
}

enum UserRole {
  trainee
  coach
  admin
}

enum ProgramDifficulty {
  beginner
  intermediate
  advanced
}

enum MealType {
  breakfast
  lunch
  dinner
  snack
}

enum WorkoutKind {
  push
  pull
  legs
  full_body
  cardio
  other
}

enum CoachRequestStatus {
  pending
  approved
  rejected
}

enum ExerciseImportRequestStatus {
  pending
  approved
  rejected
}

enum ExerciseActivityType {
  strength
  cardio
  mobility
  sport
  other
}

enum MuscleTargetRole {
  primary
  secondary
}

enum MuscleProfileStatus {
  pending
  approved
}

enum MuscleProfileSource {
  ai
  manual
}

enum WeightUnit {
  kg
  lbs
}

enum FoodSource {
  system
  user
}

enum FoodCategory {
  staple
  protein
  veg
  fruit
  dish
  drink
  other
}

enum AIGenerationType {
  workout_program
  meal_plan
}

enum AIGenerationStatus {
  pending
  completed
  failed
  accepted
}

enum NotificationType {
  workout_reminder
  meal_reminder
  check_in_reminder
  program_assigned
  coach_request
  workout_logged
  general
}

enum NotificationChannel {
  in_app
  email
  push
}

enum NotificationStatus {
  pending
  sent
  failed
  cancelled
}

enum UserSex {
  male
  female
}

enum ActivityLevel {
  sedentary
  light
  moderate
  active
  very_active
}

model User {
  id                     String                  @id @default(uuid()) @db.Uuid
  supabaseAuthUserId     String?                 @unique @db.Uuid
  name                   String
  email                  String                  @unique
  username               String?                 @unique
  phone                  String?                 @unique
  role                   UserRole
  isActive               Boolean                 @default(true)
  avatar                 String?
  fitnessGoals           String[]                @default([])
  preferredWeightUnit    WeightUnit              @default(kg)
  dailyCalorieGoal       Int                     @default(2500)
  dailyProteinGoal       Int                     @default(140)
  dailyCarbsGoal         Int                     @default(280)
  dailyFatGoal           Int                     @default(70)
  heightCm               Float?
  targetWeightKg         Float?
  goalStartWeightKg      Float?
  birthDate              DateTime?               @db.Date
  sex                    UserSex?
  activityLevel          ActivityLevel?
  coachId                String?                 @db.Uuid
  coach                  User?                   @relation("CoachTrainees", fields: [coachId], references: [id], onDelete: SetNull)
  trainees               User[]                  @relation("CoachTrainees")
  meals                  Meal[]
  exercisesCreated       Exercise[]              @relation("ExerciseCreator")
  exerciseImportRequests ExerciseImportRequest[] @relation("ExerciseImportSubmitter")
  exerciseImportReviews  ExerciseImportRequest[] @relation("ExerciseImportReviewer")
  muscleProfilesReviewed Variation[]             @relation("MuscleProfileReviewer")
  foodsCreated           Food[]                  @relation("FoodCreator")
  notifications          Notification[]
  programsCreated        Program[]               @relation("ProgramCreator")
  programAssignments     ProgramAssignment[]
  workoutLogs            WorkoutLog[]
  workoutLogComments     WorkoutLogComment[]     @relation("WorkoutLogCommentAuthor")
  bodyMetricsAsTrainee   BodyMetricEntry[]       @relation("BodyMetricTrainee")
  bodyMetricsAsCoach     BodyMetricEntry[]       @relation("BodyMetricCoach")
  checkInsAsTrainee      CoachCheckIn[]          @relation("CoachCheckInTrainee")
  checkInsAsCoach        CoachCheckIn[]          @relation("CoachCheckInCoach")
  coachRequestsAsCoach   CoachRequest[]          @relation("CoachRequestCoach")
  coachRequestsAsTrainee CoachRequest[]          @relation("CoachRequestTrainee")
  adminAuditLogs         AdminAuditLog[]         @relation("AdminAuditActor")
  aiGenerations          AIGeneration[]
  createdAt              DateTime                @default(now())
  updatedAt              DateTime                @updatedAt

  @@index([coachId])
  @@index([username])
  @@index([phone])
}

model Exercise {
  id          String      @id @default(uuid()) @db.Uuid
  name        String
  muscleGroup String
  createdById String?     @db.Uuid
  createdBy   User?       @relation("ExerciseCreator", fields: [createdById], references: [id], onDelete: SetNull)
  variations  Variation[]
  createdAt   DateTime    @default(now())
  updatedAt   DateTime    @updatedAt

  @@index([createdById])
}

model Variation {
  id                        String                  @id @default(uuid()) @db.Uuid
  exerciseId                String                  @db.Uuid
  name                      String
  equipment                 String?
  isDefault                 Boolean                 @default(false)
  sortOrder                 Int                     @default(0)
  metadata                  Json?
  activityType              ExerciseActivityType?
  muscleProfileStatus       MuscleProfileStatus     @default(pending)
  muscleProfileSource       MuscleProfileSource?
  muscleProfileConfidence   Float?
  muscleProfileRationale    String?
  muscleProfileReviewedAt   DateTime?
  muscleProfileReviewedById String?                 @db.Uuid
  exercise                  Exercise                @relation(fields: [exerciseId], references: [id], onDelete: Cascade)
  muscleProfileReviewedBy   User?                   @relation("MuscleProfileReviewer", fields: [muscleProfileReviewedById], references: [id], onDelete: SetNull)
  muscleTargets             VariationMuscleTarget[]
  workoutExercises          WorkoutExercise[]
  createdAt                 DateTime                @default(now())
  updatedAt                 DateTime                @updatedAt

  @@unique([exerciseId, name])
  @@index([equipment])
  @@index([exerciseId, sortOrder])
  @@index([activityType, muscleProfileStatus])
  @@index([muscleProfileReviewedById])
}

model MuscleRegion {
  slug      String                  @id
  targets   VariationMuscleTarget[]
  createdAt DateTime                @default(now())
}

model VariationMuscleTarget {
  variationId String           @db.Uuid
  muscleSlug  String
  role        MuscleTargetRole
  position    Int              @default(0)
  variation   Variation        @relation(fields: [variationId], references: [id], onDelete: Cascade)
  muscle      MuscleRegion     @relation(fields: [muscleSlug], references: [slug], onDelete: Restrict)
  createdAt   DateTime         @default(now())

  @@id([variationId, muscleSlug])
  @@index([muscleSlug, role])
  @@index([variationId, role, position])
}

model ExerciseImportRequest {
  id            String                      @id @default(uuid()) @db.Uuid
  submittedById String                      @db.Uuid
  reviewedById  String?                     @db.Uuid
  status        ExerciseImportRequestStatus @default(pending)
  fileName      String?
  rowCount      Int
  rows          Json
  reviewNote    String?
  result        Json?
  submittedBy   User                        @relation("ExerciseImportSubmitter", fields: [submittedById], references: [id], onDelete: Cascade)
  reviewedBy    User?                       @relation("ExerciseImportReviewer", fields: [reviewedById], references: [id], onDelete: SetNull)
  reviewedAt    DateTime?
  createdAt     DateTime                    @default(now())
  updatedAt     DateTime                    @updatedAt

  @@index([status, createdAt])
  @@index([submittedById])
  @@index([reviewedById])
}

model Food {
  id            String         @id @default(uuid()) @db.Uuid
  slug          String         @unique
  name          String
  category      FoodCategory
  brand         String?
  barcode       String?        @unique
  servingAmount Float          @default(1)
  servingUnit   String         @default("serving")
  servingLabel  String
  calories      Float
  protein       Float?
  carbs         Float?
  fat           Float?
  fiber         Float?
  sugar         Float?
  sodium        Float?
  source        FoodSource     @default(system)
  isVerified    Boolean        @default(false)
  createdById   String?        @db.Uuid
  createdBy     User?          @relation("FoodCreator", fields: [createdById], references: [id], onDelete: SetNull)
  mealItems     MealFoodItem[]
  createdAt     DateTime       @default(now())
  updatedAt     DateTime       @updatedAt

  @@index([createdById])
  @@index([category])
  @@index([name])
}

model Program {
  id              String              @id @default(uuid()) @db.Uuid
  name            String
  description     String?
  duration        Int
  difficulty      ProgramDifficulty
  workoutsPerWeek Int
  isAIGenerated   Boolean             @default(false)
  createdById     String              @db.Uuid
  createdBy       User                @relation("ProgramCreator", fields: [createdById], references: [id], onDelete: Cascade)
  workouts        Workout[]
  assignments     ProgramAssignment[]
  archivedAt      DateTime?
  createdAt       DateTime            @default(now())
  updatedAt       DateTime            @updatedAt

  @@index([createdById])
  @@index([createdById, archivedAt])
}

model ProgramAssignment {
  id         String   @id @default(uuid()) @db.Uuid
  programId  String   @db.Uuid
  userId     String   @db.Uuid
  program    Program  @relation(fields: [programId], references: [id], onDelete: Cascade)
  user       User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  assignedAt DateTime @default(now())

  @@unique([programId, userId])
  @@index([userId])
}

model Workout {
  id            String            @id @default(uuid()) @db.Uuid
  programId     String?           @db.Uuid
  name          String
  kind          WorkoutKind?
  weekIndex     Int?
  scheduledDay  Int?
  scheduledDate DateTime?         @db.Date
  duration      Int?
  notes         String?
  program       Program?          @relation(fields: [programId], references: [id], onDelete: Cascade)
  exercises     WorkoutExercise[]
  logs          WorkoutLog[]
  createdAt     DateTime          @default(now())
  updatedAt     DateTime          @updatedAt

  @@index([programId])
  @@index([programId, weekIndex])
  @@index([scheduledDate])
}

model WorkoutExercise {
  id          String        @id @default(uuid()) @db.Uuid
  workoutId   String        @db.Uuid
  variationId String        @db.Uuid
  order       Int
  restTime    Int?
  notes       String?
  workout     Workout       @relation(fields: [workoutId], references: [id], onDelete: Cascade)
  variation   Variation     @relation(fields: [variationId], references: [id], onDelete: Restrict)
  sets        ExerciseSet[]
  createdAt   DateTime      @default(now())
  updatedAt   DateTime      @updatedAt

  @@index([variationId])
  @@index([workoutId, order])
}

model ExerciseSet {
  id                String          @id @default(uuid()) @db.Uuid
  workoutExerciseId String          @db.Uuid
  setNumber         Int
  targetRepsMin     Int?
  targetReps        Int
  actualReps        Int?
  weight            Float?
  rir               Int?
  notes             String?
  completed         Boolean         @default(false)
  workoutExercise   WorkoutExercise @relation(fields: [workoutExerciseId], references: [id], onDelete: Cascade)

  @@unique([workoutExerciseId, setNumber])
}

model WorkoutLog {
  id               String              @id @default(uuid()) @db.Uuid
  userId           String              @db.Uuid
  workoutId        String?             @db.Uuid
  programId        String?             @db.Uuid
  workoutSnapshot  Json?
  exerciseSnapshot Json?
  plannedDate      DateTime?           @db.Date
  startedAt        DateTime
  completedAt      DateTime?
  totalVolume      Float?
  notes            String?
  user             User                @relation(fields: [userId], references: [id], onDelete: Cascade)
  workout          Workout?            @relation(fields: [workoutId], references: [id], onDelete: SetNull)
  comments         WorkoutLogComment[]
  createdAt        DateTime            @default(now())
  updatedAt        DateTime            @updatedAt

  @@index([userId, startedAt])
  @@index([userId, plannedDate])
  @@index([workoutId])
  @@index([programId])
}

model WorkoutLogComment {
  id           String     @id @default(uuid()) @db.Uuid
  workoutLogId String     @db.Uuid
  authorId     String     @db.Uuid
  content      String
  workoutLog   WorkoutLog @relation(fields: [workoutLogId], references: [id], onDelete: Cascade)
  author       User       @relation("WorkoutLogCommentAuthor", fields: [authorId], references: [id], onDelete: Cascade)
  createdAt    DateTime   @default(now())
  updatedAt    DateTime   @updatedAt

  @@index([workoutLogId, createdAt])
  @@index([authorId, createdAt])
}

model BodyMetricEntry {
  id         String   @id @default(uuid()) @db.Uuid
  traineeId  String   @db.Uuid
  coachId    String?  @db.Uuid
  recordedAt DateTime @default(now())
  weightKg   Float?
  bodyFatPct Float?
  chestCm    Float?
  waistCm    Float?
  hipsCm     Float?
  armCm      Float?
  thighCm    Float?
  note       String?
  trainee    User     @relation("BodyMetricTrainee", fields: [traineeId], references: [id], onDelete: Cascade)
  coach      User?    @relation("BodyMetricCoach", fields: [coachId], references: [id], onDelete: SetNull)
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt

  @@index([traineeId, recordedAt])
  @@index([coachId])
}

model CoachCheckIn {
  id             String   @id @default(uuid()) @db.Uuid
  traineeId      String   @db.Uuid
  coachId        String   @db.Uuid
  checkInDate    DateTime @default(now())
  adherenceScore Int?
  energyScore    Int?
  recoveryScore  Int?
  moodScore      Int?
  summary        String?
  feedback       String
  nextFocus      String?
  trainee        User     @relation("CoachCheckInTrainee", fields: [traineeId], references: [id], onDelete: Cascade)
  coach          User     @relation("CoachCheckInCoach", fields: [coachId], references: [id], onDelete: Cascade)
  createdAt      DateTime @default(now())
  updatedAt      DateTime @updatedAt

  @@index([traineeId, checkInDate])
  @@index([coachId, createdAt])
}

model Meal {
  id         String         @id @default(uuid()) @db.Uuid
  userId     String         @db.Uuid
  type       MealType
  name       String
  loggedDate DateTime       @db.Date
  calories   Float
  protein    Float?
  carbs      Float?
  fat        Float?
  fiber      Float?
  sugar      Float?
  sodium     Float?
  recordedAt DateTime
  user       User           @relation(fields: [userId], references: [id], onDelete: Cascade)
  items      MealFoodItem[]
  createdAt  DateTime       @default(now())
  updatedAt  DateTime       @updatedAt

  @@unique([userId, loggedDate, type])
  @@index([userId, loggedDate])
  @@index([userId, recordedAt])
}

model MealFoodItem {
  id               String   @id @default(uuid()) @db.Uuid
  mealId           String   @db.Uuid
  foodId           String   @db.Uuid
  quantity         Float    @default(1)
  amountValue      Float    @default(1)
  amountUnit       String   @default("serving")
  amountLabel      String?
  weightGrams      Float?
  notes            String?
  foodNameSnapshot String?
  calories         Float    @default(0)
  protein          Float?
  carbs            Float?
  fat              Float?
  fiber            Float?
  sugar            Float?
  sodium           Float?
  meal             Meal     @relation(fields: [mealId], references: [id], onDelete: Cascade)
  food             Food     @relation(fields: [foodId], references: [id], onDelete: Restrict)
  createdAt        DateTime @default(now())
  updatedAt        DateTime @updatedAt

  @@index([foodId])
  @@index([mealId])
}

model CoachRequest {
  id        String             @id @default(uuid()) @db.Uuid
  traineeId String             @db.Uuid
  coachId   String             @db.Uuid
  status    CoachRequestStatus @default(pending)
  trainee   User               @relation("CoachRequestTrainee", fields: [traineeId], references: [id], onDelete: Cascade)
  coach     User               @relation("CoachRequestCoach", fields: [coachId], references: [id], onDelete: Cascade)
  createdAt DateTime           @default(now())
  updatedAt DateTime           @updatedAt

  @@unique([traineeId, coachId])
  @@index([coachId, status])
}

model Notification {
  id                String              @id @default(uuid()) @db.Uuid
  userId            String              @db.Uuid
  type              NotificationType
  channel           NotificationChannel @default(in_app)
  status            NotificationStatus  @default(pending)
  title             String
  message           String
  scheduledFor      DateTime            @default(now())
  sentAt            DateTime?
  readAt            DateTime?
  relatedEntityType String?
  relatedEntityId   String?
  metadata          Json?
  user              User                @relation(fields: [userId], references: [id], onDelete: Cascade)
  createdAt         DateTime            @default(now())
  updatedAt         DateTime            @updatedAt

  @@index([userId, status, scheduledFor])
  @@index([relatedEntityType, relatedEntityId])
}

model AdminAuditLog {
  id          String   @id @default(uuid()) @db.Uuid
  adminId     String   @db.Uuid
  action      String
  entityType  String
  entityId    String?  @db.Uuid
  entityLabel String?
  metadata    Json?
  admin       User     @relation("AdminAuditActor", fields: [adminId], references: [id], onDelete: Cascade)
  createdAt   DateTime @default(now())

  @@index([adminId, createdAt])
  @@index([entityType, createdAt])
}

model AIGeneration {
  id         String             @id @default(uuid()) @db.Uuid
  userId     String             @db.Uuid
  type       AIGenerationType
  status     AIGenerationStatus @default(pending)
  input      Json
  output     Json?
  programId  String?            @db.Uuid
  tokenUsage Int?
  errorMsg   String?
  user       User               @relation(fields: [userId], references: [id], onDelete: Cascade)
  createdAt  DateTime           @default(now())

  @@index([userId, type, createdAt])
}
