erDiagram
  User {
    String id PK "Uuid"
    String supabaseAuthUserId UK "nullable; Uuid"
    String name  "scalar"
    String email UK "scalar"
    String username UK "nullable; scalar"
    String phone UK "nullable; scalar"
    UserRole role  "enum"
    Boolean isActive  "scalar"
    String avatar  "nullable; scalar"
    StringArray fitnessGoals  "scalar"
    WeightUnit preferredWeightUnit  "enum"
    Int dailyCalorieGoal  "scalar"
    Int dailyProteinGoal  "scalar"
    Int dailyCarbsGoal  "scalar"
    Int dailyFatGoal  "scalar"
    Float heightCm  "nullable; scalar"
    Float targetWeightKg  "nullable; scalar"
    Float goalStartWeightKg  "nullable; scalar"
    DateTime birthDate  "nullable; Date"
    UserSex sex  "nullable; enum"
    ActivityLevel activityLevel  "nullable; enum"
    String coachId FK "nullable; Uuid"
    DateTime createdAt  "scalar"
    DateTime updatedAt  "scalar"
  }
  Exercise {
    String id PK "Uuid"
    String name  "scalar"
    String muscleGroup  "scalar"
    String createdById FK "nullable; Uuid"
    DateTime createdAt  "scalar"
    DateTime updatedAt  "scalar"
  }
  Variation {
    String id PK "Uuid"
    String exerciseId FK "Uuid"
    String name  "scalar"
    String equipment  "nullable; scalar"
    Boolean isDefault  "scalar"
    Int sortOrder  "scalar"
    Json metadata  "nullable; scalar"
    ExerciseActivityType activityType  "nullable; enum"
    MuscleProfileStatus muscleProfileStatus  "enum"
    MuscleProfileSource muscleProfileSource  "nullable; enum"
    Float muscleProfileConfidence  "nullable; scalar"
    String muscleProfileRationale  "nullable; scalar"
    DateTime muscleProfileReviewedAt  "nullable; scalar"
    String muscleProfileReviewedById FK "nullable; Uuid"
    DateTime createdAt  "scalar"
    DateTime updatedAt  "scalar"
  }
  MuscleRegion {
    String slug PK "scalar"
    DateTime createdAt  "scalar"
  }
  VariationMuscleTarget {
    String variationId PK, FK "Uuid"
    String muscleSlug PK, FK "scalar"
    MuscleTargetRole role  "enum"
    Int position  "scalar"
    DateTime createdAt  "scalar"
  }
  ExerciseImportRequest {
    String id PK "Uuid"
    String submittedById FK "Uuid"
    String reviewedById FK "nullable; Uuid"
    ExerciseImportRequestStatus status  "enum"
    String fileName  "nullable; scalar"
    Int rowCount  "scalar"
    Json rows  "scalar"
    String reviewNote  "nullable; scalar"
    Json result  "nullable; scalar"
    DateTime reviewedAt  "nullable; scalar"
    DateTime createdAt  "scalar"
    DateTime updatedAt  "scalar"
  }
  Food {
    String id PK "Uuid"
    String slug UK "scalar"
    String name  "scalar"
    FoodCategory category  "enum"
    String brand  "nullable; scalar"
    String barcode UK "nullable; scalar"
    Float servingAmount  "scalar"
    String servingUnit  "scalar"
    String servingLabel  "scalar"
    Float calories  "scalar"
    Float protein  "nullable; scalar"
    Float carbs  "nullable; scalar"
    Float fat  "nullable; scalar"
    Float fiber  "nullable; scalar"
    Float sugar  "nullable; scalar"
    Float sodium  "nullable; scalar"
    FoodSource source  "enum"
    Boolean isVerified  "scalar"
    String createdById FK "nullable; Uuid"
    DateTime createdAt  "scalar"
    DateTime updatedAt  "scalar"
  }
  Program {
    String id PK "Uuid"
    String name  "scalar"
    String description  "nullable; scalar"
    Int duration  "scalar"
    ProgramDifficulty difficulty  "enum"
    Int workoutsPerWeek  "scalar"
    Boolean isAIGenerated  "scalar"
    String createdById FK "Uuid"
    DateTime archivedAt  "nullable; scalar"
    DateTime createdAt  "scalar"
    DateTime updatedAt  "scalar"
  }
  ProgramAssignment {
    String id PK "Uuid"
    String programId FK "Uuid"
    String userId FK "Uuid"
    DateTime assignedAt  "scalar"
  }
  Workout {
    String id PK "Uuid"
    String programId FK "nullable; Uuid"
    String name  "scalar"
    WorkoutKind kind  "nullable; enum"
    Int weekIndex  "nullable; scalar"
    Int scheduledDay  "nullable; scalar"
    DateTime scheduledDate  "nullable; Date"
    Int duration  "nullable; scalar"
    String notes  "nullable; scalar"
    DateTime createdAt  "scalar"
    DateTime updatedAt  "scalar"
  }
  WorkoutExercise {
    String id PK "Uuid"
    String workoutId FK "Uuid"
    String variationId FK "Uuid"
    Int order  "scalar"
    Int restTime  "nullable; scalar"
    String notes  "nullable; scalar"
    DateTime createdAt  "scalar"
    DateTime updatedAt  "scalar"
  }
  ExerciseSet {
    String id PK "Uuid"
    String workoutExerciseId FK "Uuid"
    Int setNumber  "scalar"
    Int targetRepsMin  "nullable; scalar"
    Int targetReps  "scalar"
    Int actualReps  "nullable; scalar"
    Float weight  "nullable; scalar"
    Int rir  "nullable; scalar"
    String notes  "nullable; scalar"
    Boolean completed  "scalar"
  }
  WorkoutLog {
    String id PK "Uuid"
    String userId FK "Uuid"
    String workoutId FK "nullable; Uuid"
    String programId  "nullable; Uuid"
    Json workoutSnapshot  "nullable; scalar"
    Json exerciseSnapshot  "nullable; scalar"
    DateTime plannedDate  "nullable; Date"
    DateTime startedAt  "scalar"
    DateTime completedAt  "nullable; scalar"
    Float totalVolume  "nullable; scalar"
    String notes  "nullable; scalar"
    DateTime createdAt  "scalar"
    DateTime updatedAt  "scalar"
  }
  WorkoutLogComment {
    String id PK "Uuid"
    String workoutLogId FK "Uuid"
    String authorId FK "Uuid"
    String content  "scalar"
    DateTime createdAt  "scalar"
    DateTime updatedAt  "scalar"
  }
  BodyMetricEntry {
    String id PK "Uuid"
    String traineeId FK "Uuid"
    String coachId FK "nullable; Uuid"
    DateTime recordedAt  "scalar"
    Float weightKg  "nullable; scalar"
    Float bodyFatPct  "nullable; scalar"
    Float chestCm  "nullable; scalar"
    Float waistCm  "nullable; scalar"
    Float hipsCm  "nullable; scalar"
    Float armCm  "nullable; scalar"
    Float thighCm  "nullable; scalar"
    String note  "nullable; scalar"
    DateTime createdAt  "scalar"
    DateTime updatedAt  "scalar"
  }
  CoachCheckIn {
    String id PK "Uuid"
    String traineeId FK "Uuid"
    String coachId FK "Uuid"
    DateTime checkInDate  "scalar"
    Int adherenceScore  "nullable; scalar"
    Int energyScore  "nullable; scalar"
    Int recoveryScore  "nullable; scalar"
    Int moodScore  "nullable; scalar"
    String summary  "nullable; scalar"
    String feedback  "scalar"
    String nextFocus  "nullable; scalar"
    DateTime createdAt  "scalar"
    DateTime updatedAt  "scalar"
  }
  Meal {
    String id PK "Uuid"
    String userId FK "Uuid"
    MealType type  "enum"
    String name  "scalar"
    DateTime loggedDate  "Date"
    Float calories  "scalar"
    Float protein  "nullable; scalar"
    Float carbs  "nullable; scalar"
    Float fat  "nullable; scalar"
    Float fiber  "nullable; scalar"
    Float sugar  "nullable; scalar"
    Float sodium  "nullable; scalar"
    DateTime recordedAt  "scalar"
    DateTime createdAt  "scalar"
    DateTime updatedAt  "scalar"
  }
  MealFoodItem {
    String id PK "Uuid"
    String mealId FK "Uuid"
    String foodId FK "Uuid"
    Float quantity  "scalar"
    Float amountValue  "scalar"
    String amountUnit  "scalar"
    String amountLabel  "nullable; scalar"
    Float weightGrams  "nullable; scalar"
    String notes  "nullable; scalar"
    String foodNameSnapshot  "nullable; scalar"
    Float calories  "scalar"
    Float protein  "nullable; scalar"
    Float carbs  "nullable; scalar"
    Float fat  "nullable; scalar"
    Float fiber  "nullable; scalar"
    Float sugar  "nullable; scalar"
    Float sodium  "nullable; scalar"
    DateTime createdAt  "scalar"
    DateTime updatedAt  "scalar"
  }
  CoachRequest {
    String id PK "Uuid"
    String traineeId FK "Uuid"
    String coachId FK "Uuid"
    CoachRequestStatus status  "enum"
    DateTime createdAt  "scalar"
    DateTime updatedAt  "scalar"
  }
  Notification {
    String id PK "Uuid"
    String userId FK "Uuid"
    NotificationType type  "enum"
    NotificationChannel channel  "enum"
    NotificationStatus status  "enum"
    String title  "scalar"
    String message  "scalar"
    DateTime scheduledFor  "scalar"
    DateTime sentAt  "nullable; scalar"
    DateTime readAt  "nullable; scalar"
    String relatedEntityType  "nullable; scalar"
    String relatedEntityId  "nullable; scalar"
    Json metadata  "nullable; scalar"
    DateTime createdAt  "scalar"
    DateTime updatedAt  "scalar"
  }
  AdminAuditLog {
    String id PK "Uuid"
    String adminId FK "Uuid"
    String action  "scalar"
    String entityType  "scalar"
    String entityId  "nullable; Uuid"
    String entityLabel  "nullable; scalar"
    Json metadata  "nullable; scalar"
    DateTime createdAt  "scalar"
  }
  AIGeneration {
    String id PK "Uuid"
    String userId FK "Uuid"
    AIGenerationType type  "enum"
    AIGenerationStatus status  "enum"
    Json input  "scalar"
    Json output  "nullable; scalar"
    String programId  "nullable; Uuid"
    Int tokenUsage  "nullable; scalar"
    String errorMsg  "nullable; scalar"
    DateTime createdAt  "scalar"
  }
  User |o..o{ User : "coachId"
  User |o..o{ Exercise : "createdById"
  Exercise ||..o{ Variation : "exerciseId"
  User |o..o{ Variation : "muscleProfileReviewedById"
  Variation ||..o{ VariationMuscleTarget : "variationId"
  MuscleRegion ||..o{ VariationMuscleTarget : "muscleSlug"
  User ||..o{ ExerciseImportRequest : "submittedById"
  User |o..o{ ExerciseImportRequest : "reviewedById"
  User |o..o{ Food : "createdById"
  User ||..o{ Program : "createdById"
  Program ||..o{ ProgramAssignment : "programId"
  User ||..o{ ProgramAssignment : "userId"
  Program |o..o{ Workout : "programId"
  Workout ||..o{ WorkoutExercise : "workoutId"
  Variation ||..o{ WorkoutExercise : "variationId"
  WorkoutExercise ||..o{ ExerciseSet : "workoutExerciseId"
  User ||..o{ WorkoutLog : "userId"
  Workout |o..o{ WorkoutLog : "workoutId"
  WorkoutLog ||..o{ WorkoutLogComment : "workoutLogId"
  User ||..o{ WorkoutLogComment : "authorId"
  User ||..o{ BodyMetricEntry : "traineeId"
  User |o..o{ BodyMetricEntry : "coachId"
  User ||..o{ CoachCheckIn : "traineeId"
  User ||..o{ CoachCheckIn : "coachId"
  User ||..o{ Meal : "userId"
  Meal ||..o{ MealFoodItem : "mealId"
  Food ||..o{ MealFoodItem : "foodId"
  User ||..o{ CoachRequest : "traineeId"
  User ||..o{ CoachRequest : "coachId"
  User ||..o{ Notification : "userId"
  User ||..o{ AdminAuditLog : "adminId"
  User ||..o{ AIGeneration : "userId"
